# minigrep

./: .gitignore  Cargo.toml  LICENSE.txt  README.md  search  test-linux.sh  test-win.bat
.cargo/: config.toml
.forgejo/workflows/: rust.yml
.github/workflows/: build.yml  codecov.yml  rust.yml
src/: constants.rs  lib.rs  main.rs  tests.rs
testFiles/: poem.txt  poem2.txt
