[package]
name = "searcher_txt"
version = "1.2.4"
authors = ["Raphdf201 <raphdf201@hotmail.com>"]
edition = "2021"
license-file = "unlicense.txt"
description = "A copy of grep that i made to show that im bad at rust"
readme = "README.md"
homepage = "https://github.com/Raphdf201/minigrep/releases"
repository = "https://github.com/Raphdf201/minigrep"
keywords = ["cli", "grep", "search"]

[dependencies]

[profile.test]
opt-level = 1

[profile.bench]
opt-level = 2
