[package]
name = "searcher_txt"
version = "1.2.9"
authors = ["Raphdf201 <raphdf201@hotmail.com>"]
edition = "2024"
license-file = "unlicense.txt"
description = "A copy of grep that I made to show that im bad at rust"
readme = "README.md"
homepage = "https://github.com/Raphdf201/minigrep/releases"
repository = "https://github.com/Raphdf201/minigrep"
keywords = ["cli", "grep", "search"]

[dependencies]
clap = { version = "4.5.50", features = ["derive"] }
walkdir = "2.5.0"

[dev-dependencies]
cargo-llvm-cov = "0.6.21"
